--- a/main.html
+++ b/main.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
   <body>
+	  <h1 id="url"></h1>
+	  <label for="name" >Name:</label>
+	  <input type="text"  id="name" name="name"/>
+	  <label for="year" >Graduation year:</label>
+	  <input type="number"  id="year" name="year"/>
+	  <button id="button">Submit</button>
     <script type="text/javascript" src="./script.js">
 </script>
   </body>
